--- a/view/exercises/matematica/2-0-3/css/styles.css
+++ b/view/exercises/matematica/2-0-3/css/styles.css
@@ -72,6 +72,27 @@
     margin: 10px;
 }
 
+.contentRespuesta{
+    display: grid;
+    width: 60%;
+    margin: auto;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+    align-items: center;
+}
+.item{
+    width: 100px;
+    font-size: 30px;
+    font-weight: 600;
+    text-align: center;
+    border: 1px solid rgb(10, 206, 255);
+    transition: all .2s ease-in-out;
+    border-radius: 5px;
+}
+.item:hover{
+    background-color: rgb(178, 255, 255);
+    transition: all .2s ease-in-out;
+}
 
 @media only screen and (max-width: 1300px) {
     .imagenPricipal img{
