--- a/view/exercises/matematica/2-5-8/css/styles.css
+++ b/view/exercises/matematica/2-5-8/css/styles.css
@@ -1,44 +1,46 @@
 .container .content{
   width: 80%;
   margin: auto;
-  padding-top: 10vh;
+  padding-top: 15vh;
   display: grid;
   align-items: center;
   justify-items: center;
-  grid-template-columns: 1fr;
-}
-.tabla{
-  border: 3px dashed rgb(255, 161, 21);
-  padding: 40px;
-  text-align: center;
-  border-radius: 1px;
-  box-shadow: 2px 2px 14px rgba(185, 185, 185, 0.336);
-  background-color: rgb(255, 237, 214);
-}
-.tabla span{
-  font-size: 2rem;
-}
-.column{
-  display: grid;
-  justify-items: center;
-  align-items: center;
   grid-template-columns: 1fr 1fr;
 }
-.column img{
-  text-align: center;
-  width: 400px;
-  grid-column: 1/3;
+.item{
+  font-size: 2.2rem;
+  display: grid;
+  justify-items: center;
 }
-.column .img2{
-  width: 210px;
-  grid-column: 1/2;
-  justify-self: right;
+.image img{
+  width: 700px;
 }
-.column .img3{
-  width: 400px;
-  align-self: flex-end;
-  grid-column: 1/3;
+.imagen img{
+  width: 700px;
 }
+.rojo{
+  color: red;
+}
+.detalle{
+  font-size: 1.5rem;
+}
+.detalle span {
+  margin-top: 20px;
+  border: 1px solid rgb(255, 161, 73);
+  padding: 2px 8px;
+  border-radius: 10px;
+  font-weight: 400;
+  background-color: rgb(252, 222, 178);
+}
+.item span {
+   display: inline-block;
+}
+
+
+
+
+
+
 ::-webkit-scrollbar {
   -webkit-border-radius: 5px;
   background-color: transparent;
@@ -49,17 +51,6 @@
   transition: background-color .2s linear;
   width: 0px;
 }
-.opcion{
-  grid-column: 2/3; 
-  justify-self: left;
-  padding-left: 70px;
-
-}
-.content span{
-  display: inline-block;
-}
-
-
 /*SELECT*/
 .select-wrapper input.select-dropdown {
   border: 1px solid rgb(192, 192, 192);
@@ -68,14 +59,6 @@
   font-weight: 400;
   font-size: 24px;
   height: auto;
-}
-.largo  input.select-dropdown {
-  border: 1px solid rgb(192, 192, 192);
-  width: 200px;
-  margin: 10px 0px;
-  font-weight: 400;
-  font-size: 24px;
-  height: 40px;
 }
 .select-wrapper .caret{
     display: none;
@@ -115,18 +98,36 @@
   width: 60px;
   border-radius: 12px;
 }
+
+@media screen and (max-width: 1400px){
+  .container {
+    margin-top: 8vh;
+  }
+  .image img{
+    width: 400px;
+  }
+  .imagen img{
+    width: 400px;
+  }
+  .detalle span{
+    margin-top: 10px;
+  }
+}
+
 @media screen and (max-height: 700px){
+  .container {
+    margin-top: 4vh;
+  }
   .container .content{
-    width: 80%;
-    margin: auto;
-    padding-top: 5vh;
-    display: grid;
-    grid-template-columns: 1fr;
+    padding-top: 9vh;
   }
-  .tabla{
-    padding: 20px;
+  .image img{
+    width: 400px;
   }
-  .tabla span{
-    font-size: 1.5rem;
+  .imagen img{
+    width: 400px;
+  }
+  .detalle span{
+    margin-top: 10px;
   }
 }
