--- a/view/exercises/matematica/2-5-10/css/styles.css
+++ b/view/exercises/matematica/2-5-10/css/styles.css
@@ -1,8 +1,7 @@
 .container-two {
   padding-top: 4vh;
   margin: 0 auto;
-  max-width: 1200px;
-  width: 90%;
+  width: 80%;
   display: grid;
   grid-template-columns: 1fr;
   justify-items: center;
@@ -15,7 +14,7 @@
 }
 .fila{
   display: grid;
-  grid-template-columns: 8fr;
+  grid-template-columns: 1fr;
   align-items: center;
   justify-items: center;
   color: red;
@@ -23,6 +22,13 @@
   font-weight: 600;
   padding-bottom: 30px;
   padding-top: 20px;
+}
+.problemas {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  justify-items: center;
 }
 .fila .image{
   display: grid;
@@ -32,26 +38,37 @@
   text-align: center;
 }
 .image img{
-  height: 200px;
+  height: 10vw;
 }
 .problema span{
   display: inline-block;
   font-weight: 600;
   font-size: 24px;
-  color: red;
+  color: rgb(41, 41, 41);
 }
 
 
 
 
 /*SELECT*/
+
+::-webkit-scrollbar {
+  -webkit-border-radius: 5px;
+  background-color: transparent;
+  border-radius: 5px;
+  height: 10px;
+  -webkit-transition: background-color .2s linear;
+  -o-transition: background-color .2s linear;
+  transition: background-color .2s linear;
+  width: 0px;
+}
 .select-wrapper input.select-dropdown {
   border: 1px solid silver;
-  width: 80px;
+  width: 38px;
   margin: 12px 0px;
   font-weight: 400;
   font-size: 24px;
-  height: 40px;
+  height: 35px;
 }
 
 .select-wrapper input.select-dropdown:focus {
@@ -74,7 +91,7 @@
   background-color: #fff;
   margin: 0;
   display: none;
-  min-width: 20px;
+  min-width: 50px;
   overflow-y: auto;
   opacity: 0;
   position: absolute;
@@ -84,8 +101,15 @@
   -webkit-transform-origin: 0 0;
   transform-origin: 0 0;
   width: 10px;
-  border-radius: 12px;
+  border-radius: 1px!important;
 }
+input:not([type]), input[type=text]:not(.browser-default), input[type=password]:not(.browser-default), input[type=email]:not(.browser-default), input[type=url]:not(.browser-default), input[type=time]:not(.browser-default), input[type=date]:not(.browser-default), input[type=datetime]:not(.browser-default), input[type=datetime-local]:not(.browser-default), input[type=tel]:not(.browser-default), input[type=number]:not(.browser-default), input[type=search]:not(.browser-default), textarea.materialize-textarea {
+  background-color: #ffffff !important;
+  border-radius: 8px !important;
+}
+
+
+
 @media screen and (max-width: 1270px){
   .content {
     grid-column-gap: 40px;
