--- a/view/exercises/matematica/3-3-13/css/styles.css
+++ b/view/exercises/matematica/3-3-13/css/styles.css
@@ -24,10 +24,10 @@
 
 .select-wrapper input.select-dropdown {
     border: 1px solid silver;
-    width: 160px;
+    width: 100%;
     margin: 0;
     font-weight: 600;
-    font-size: 22px;
+    font-size: 18px;
 }
 
 .select-wrapper input.select-dropdown:focus {
@@ -40,6 +40,7 @@
 
 .select-wrapper {
     position: relative;
+    margin: 0px 1vh;
 }
 
 .dropdown-content {
@@ -59,30 +60,87 @@
     border-radius: 8px;
 }
 
+.select-wrapper input.select-dropdown {
+    height: 2.5rem;
+}
+
+.tabs .tab a {
+    color: rgba(0, 149, 218, 0.5);
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+    font-size: 14px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    -webkit-transition: color .28s ease, background-color .28s ease;
+    transition: color .28s ease, background-color .28s ease;
+}
+.tabs .tab a.active {
+    background-color: rgba(0, 149, 218, 0.1);
+    color: #0095DA;
+}
+.tabs .tab a:focus, .tabs .tab a:focus.active {
+    background-color: rgba(0, 149, 218, 0.1);
+    outline: none;
+}
+.tabs .indicator {
+    position: absolute;
+    bottom: 0;
+    height: 2px;
+    background-color: #0095DA;
+    will-change: left, right;
+}
+
+
 /* Estilos generales */
 
 .grid-container {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto auto;
     justify-content: center;
     align-items: center;
 }
 
 .grid-respuesta {
     display: grid;
-    grid-template-columns: auto;
+    grid-template-columns: auto auto auto;
+    justify-content: center;
+    align-items: center;
+}
+
+.grid-respuesta2 {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
     justify-content: center;
     align-items: center;
 }
 
 .grid-item {
-    margin: 1.5vh 4vh;
+    /* border: 1px solid tomato; */
+    margin: 0.3vh;
+    padding: 2vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .item {
     display: flex;
     align-items: center;
-    font-size: 1.4em;
+    font-size: 1.1em;
+    font-weight: 500;
+    margin: 1vh;
+}
+
+.test {
+    border-bottom: 2px dashed #0095DA;
+    border-left: 2px dashed #0095DA;
+    border-right: 2px dashed #0095DA;
+    width: 100%;
+    height: auto;
 }
 
 .total {
@@ -105,9 +163,26 @@
 }
 
 .s {
-    color: red;
+    color: #0095DA;
     margin-left: 1vh;
     margin-right: 1vh;
     font-weight: bold;
     font-size: 20px;
+}
+
+.so {
+    color: #800080;
+    margin-left: 1vh;
+    margin-right: 1vh;
+    font-weight: bold;
+    font-size: 20px;
+    margin: auto;
+}
+h5 {
+    width: 80%;
+    font-size: 140%;
+}
+.mb {
+    margin-bottom: 2vh;
+    font-size: 1.2rem; 
 }
