--- a/view/exercises/matematica/1-0-15/css/styles.css
+++ b/view/exercises/matematica/1-0-15/css/styles.css
@@ -3,58 +3,65 @@
     max-width: 1280px;
     width: 70%;
 }
-
+.img {
+    width: auto;
+    height: 228px;
+    margin-top: 2vh;
+}
+@media (min-width: 1920px) {
+    .img {
+        width: auto;
+        height: 400px;
+    }
+}
 .grid-container {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: auto;
     padding: 10px;
-    justify-content: center;
-    align-items: center;
+    margin-top: 2vh;
 }
 
 .grid-item {
-    padding: 10px;
-    font-size: 24px;
-    margin: auto;
+    padding: 5px;
+    font-size: 18px;
+    text-align: center;
+}
+
+.flex-box {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
-.img {
-    border-style: none;
-    height: auto;
-    width: 75%;
-    /* margin-bottom: 4vh;*/
-}
-.img-select {
-    border-style: none;
-    height: auto;
+.caja {
     width: 50px;
-    /* margin-bottom: 4vh;*/
+    height: 50px;
+    border: 2px solid silver;
+    border-radius: 12px;
 }
-.df {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.span-before {
+    margin-right: 10px;
 }
-.select-wrapper input.select-dropdown {
-    background: orange !important;
-    color: #ffffff !important;
-    width: 65px;
-    margin-left: 1vh;
+.span-after {
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
-/* .box-select {
-    display: flex;
-    justify-content: center;
-} */
-.box-igual {
-    margin-right: 1vh;
+ul.opciones {
     display: flex;
     align-items: center;
-    /* justify-content: center; */
+    justify-content: center;
 }
-.after {
+li.pieza {
+    background: orange;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 12px;
     margin-right: 1vh;
+}
+.pieza span {
+    font-size: 1.5em;
+    font-weight: 500;
 }
