--- a/view/exercises/matematica/1-0-7/css/styles.css
+++ b/view/exercises/matematica/1-0-7/css/styles.css
@@ -1,66 +1,67 @@
-#contenedorpuzzle {
+.container-two {
+    margin: 0 auto;
+    max-width: 1280px;
     width: 70%;
-    margin: -2vh auto;
 }
-
+.img {
+    width: auto;
+    height: 228px;
+    margin-top: 2vh;
+}
 @media (min-width: 1920px) {
-    #contenedorpuzzle {
-        width: 50%;
-        margin: 1vh auto;}
+    .img {
+        width: auto;
+        height: 400px;
+    }
 }
-
 .grid-container {
     display: grid;
-    grid-template-columns: auto auto auto auto auto auto;
+    grid-template-columns: auto;
     padding: 10px;
-    justify-content: center;
-    align-items: center;
+    margin-top: 2vh;
 }
 
-.grid-item{
-    background-color: rgba(255, 255, 255, 0.8);
-    border: 3px solid silver;
-    padding: 6px 0 0;
-    font-size: 22px;
-    text-align: center;
-    margin: 6px;
-    width: 140px;
-    height: 145px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-.figura {
-    border-top: 3px solid silver;
-    height: 40%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.grid-item {
     padding: 5px;
-    color: transparent;
+    font-size: 18px;
+    text-align: center;
 }
-.figura img {
-    width: auto;
+
+.flex-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.caja {
+    width: 50px;
+    height: 50px;
+    border: 2px solid silver;
+    border-radius: 12px;
+}
+.span-before {
+    margin-right: 10px;
+}
+.span-after {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+ul.opciones {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+li.pieza {
+    background: orange;
+    width: 40px;
     height: 40px;
-    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 12px;
+    margin-right: 1vh;
 }
-.figura.p:hover {
-    cursor: pointer;
-}
-
-/* .grid-item:hover {
-    border: 3px solid #37D3F7;
-    cursor: pointer;
-} */
-
-h5 {
-    font-size: 200%;
-}
-
-.grid-item img.p-img {
-    width: auto;
-    height: 70px;
-    margin-bottom: 1vh;
+.pieza span {
+    font-size: 1.5em;
+    font-weight: 500;
 }
